# Early_Warning_Scores

./: .gitignore  README.md  drafts.ipynb  pyproject.toml
Merging/: EWS_Blood.py  EWS_Blood_ITA_Procedures.R  EWS_Final_Merging.py  EWS_ITA.py
Modelling/: Development_Comparisons.r  Evaluating_NEWS2_Only.r
Pre-processing/: Original_Preprocessing.ipynb
Pre_processing/: Blood_Tests.py  Intensive_Care.R  Procedures.R  drafts.ipynb
modelling/: Development_Comparisons.r  Evaluating_NEWS2_Only.r  IECV_NEWS2.r  README.md  Secondary_Outcome_Comparisons.r  Secondary_Outcome_NEWS2.r  Table1_Creation_EWS.R  benchmark.py  model_zoo.py
modelling/ResNet/: resnet_ft.py  resnext.py
preprocessing/: Diagnoses.R  blood_tests.py
public_data/: sks.csv  sks_kapitler.csv  sks_mapping.csv
