[project]
name = "ews2024"
dynamic = ["version"]
dependencies = [
  "catboost",
  "fastparquet",
  "numpy<2.0",
  "pandas",
  "polars",
  "seaborn",
  "torch",
  "torchvision",
  "xgboost",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''
